# fossology-python

./: .buildinfo  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  LICENSE.md  Pipfile  README.md  README.rst  enums.html  exceptions.html  folders.html  foss_cli.html  fossology.html  genindex.html  groups.html  index.html  items.html  jobs.html  license.html  logging.html  obj.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  report.html  sample_workflow.html  search.html  searchindex.js  setup.py  test.py  uploads.html  users.html
.doctrees/: enums.doctree  environment.pickle  exceptions.doctree  folders.doctree  foss_cli.doctree  fossology.doctree  groups.doctree  index.doctree  items.doctree  jobs.doctree  license.doctree  logging.doctree  obj.doctree  report.doctree  sample_workflow.doctree  uploads.doctree  users.doctree
.github/workflows/: clitests.yml  doc-deploy.yml  foss_cli_tests.yml  fossologypython.yml  fossologytests.yml  semantic-release.yml  staticchecks.yml
_sources/: enums.rst.txt  index.rst.txt  items.rst.txt  report.rst.txt  sample_workflow.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  exceptions.html  folders.html  fossology.html  genindex.html  index.html  jobs.html  logging.html  obj.html  objects.inv  py-modindex.html  report.html  search.html  searchindex.js  uploads.html
docs-source/: conf.py  exceptions.rst  folders.rst  foss_cli.rst  groups.rst  index.rst  license.rst  logging.rst  obj.rst  sample_workflow.rst  uploads.rst  users.rst
docs/.doctrees/: environment.pickle  exceptions.doctree  folders.doctree  fossology.doctree  index.doctree  jobs.doctree  logging.doctree  obj.doctree  report.doctree  uploads.doctree
docs/_sources/: fossology.rst.txt
docs/source/: api.rst  conf.py  index.rst  jobs.rst
fossology/: __init__.py  __main__.py  api.py  enums.py  exceptions.py  folders.py  foss_cli.py  groups.py  items.py  jobs.py  license.py  obj.py  report.py  search.py  uploads.py  users.py
fossology/tests/: test.py  test_base.py  test_folders.py  test_jobs.py  test_report.py  test_uploads.py  tests.py
stubgen/fossology/: __init__.pyi  exceptions.pyi  folders.pyi  groups.pyi  jobs.pyi  license.pyi  obj.pyi  report.pyi  uploads.pyi
stubgen/tests/: conftest.pyi  test_folders.pyi  test_groups.pyi  test_jobs.pyi  test_license.pyi  test_report.pyi  test_search.pyi  test_uploads.pyi  test_users.pyi
test_files/: base-files_10.3-debian10-combined.tar.bz2
tests/: check_api_coverage.py  conftest.py  test_base.py  test_folders.py  test_foss_cli_create_cmds.py  test_foss_cli_flow_cmds.py  test_foss_cli_help.py  test_foss_cli_logger.py  test_foss_cli_schedule_jobs.py  test_foss_cli_start_workflow.py  test_groups.py  test_init.py  test_items.py  test_jobs.py  test_license.py  test_report.py  test_search.py  test_upload_clearing.py  test_upload_from.py  test_upload_licenses_copyrights.py  test_upload_permissions.py  test_uploads.py  test_users.py  tests.py
tests/files/: base-files_10.3-debian10-combined.tar.bz2.spdx-report.rdf  base-files_11.tar.xz  zlib_1.2.11.dfsg-0ubuntu2.debian.tar.xz
