[tool.poetry]
name = "fossology"
version = "3.2.1"
description = "A library to automate Fossology from Python scripts"
authors = ["Marion Deveaud <marion.deveaud@siemens.com>"]
license = "MIT License"
readme = "README.rst"
include = ["LICENSE.md"]
repository = "https://github.com/fossology/fossology-python"
homepage = "https://github.com/fossology/fossology-python"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.mypy]
exclude = ["tests/"]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31.0"
tenacity = ">=8.2.2"
click = "^8.1.6"
poethepoet = "^0.21.1"
types-requests = "^2.31.0.2"

[tool.poetry.group.dev.dependencies]
sphinx = ">=7.1.2"
coverage = "^6.5.0"
codecov = "^2.1.13"
pytest = "^7.4.0"
responses = "^0.23.3"
sphinx-autobuild = "^2021.3.14"
rstcheck = "^6.1.2"
requests-toolbelt = "^0.9.1"
mypy = "^1.4.1"
ruff = "^0.3.5"

[tool.poe.tasks]
types = { cmd = "mypy ." }
lint = { cmd = "ruff check" }
format = { cmd = "ruff format" }

[tool.poetry.scripts]
foss_cli = "fossology.foss_cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

