[project]
name = "fossology"
version = "4.0.0"
description = "A library to automate Fossology from Python scripts"
authors = [{name = "Marion Deveaud", email = "marion.deveaud@siemens.com"}]
license = {text = "MIT License"}
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "click>=8.2.1",
    "poethepoet>=0.21.1",
    "types-requests>=2.32.0.2",
    "requests-toolbelt>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "sphinx>=8.1.3",
    "coverage>=6.5.0",
    "codecov>=2.1.13",
    "pytest>=7.4,<10.0",
    "responses>=0.23.3",
    "sphinx-autobuild>=2021.3.14",
    "rstcheck>=6.1.2",
    "mypy>=1.14.1",
    "ruff>=0.3.7",
]

[project.urls]
repository = "https://github.com/fossology/fossology-python"
homepage = "https://github.com/fossology/fossology-python"

[project.scripts]
foss_cli = "fossology.foss_cli:main"

[tool.mypy]
exclude = ["tests/"]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"

[tool.semantic_release]
build = true
build_command = "pip install build && python -m build"
version_source = "tag"
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "docs-source/conf.py:release",
]

[tool.poe.tasks]
types = { cmd = "mypy ." }
lint = { cmd = "ruff check" }
format = { cmd = "ruff format" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
dev-dependencies = [
    "sphinx>=8.1.3",
    "coverage>=6.5.0",
    "codecov>=2.1.13",
    "pytest>=7.4,<10.0",
    "responses>=0.23.3",
    "sphinx-autobuild>=2021.3.14",
    "rstcheck>=6.1.2",
    "mypy>=1.14.1",
    "ruff>=0.3.7",
]
